--- a/osgi/modules/polls-application/polls-web/src/main/webapp/html/portlet/polls/view_question_results.jspf
+++ b/osgi/modules/polls-application/polls-web/src/main/webapp/html/portlet/polls/view_question_results.jspf
@@ -1,3 +1,4 @@
+<%@ page import="javax.portlet.ResourceURL" %>
 <%--
 /**
  * Copyright (c) 2000-2013 Liferay, Inc. All rights reserved.
@@ -103,7 +104,13 @@ for (int i = 0; i < choices.size(); i++) {
 	for (int i = 0; i < _CHARTS.length; i++) {
 		String chart = _CHARTS[i];
 
-		String hrefTaglib = "javascript:var viewChartWindow = window.open('" + themeDisplay.getPathMain() + "/polls/view_chart?questionId=" + question.getQuestionId() +"&chartType=" + TextFormatter.format(chart, TextFormatter.N) + "', 'viewChart', 'directories=no,height=430,location=no,menubar=no,resizable=no,scrollbars=no,status=no,toolbar=no,width=420'); void(''); viewChartWindow.focus();";
+		ResourceURL viewChartUrl = renderResponse.createResourceURL();
+
+		viewChartUrl.setParameter("struts_action", "/polls/view_chart");
+		viewChartUrl.setParameter("chartType", TextFormatter.format(chart, TextFormatter.N));
+		viewChartUrl.setParameter("questionId", Long.toString(question.getQuestionId()));
+
+		String hrefTaglib = "javascript:var viewChartWindow = window.open('" + viewChartUrl + "', 'viewChart', 'directories=no,height=430,location=no,menubar=no,resizable=no,scrollbars=no,status=no,toolbar=no,width=420'); void(''); viewChartWindow.focus();";
 	%>
 
 		<aui:a href="<%= hrefTaglib %>"><liferay-ui:message key="<%= chart %>" /></aui:a><%= (i != (_CHARTS.length - 1)) ? StringPool.COMMA_AND_SPACE : StringPool.BLANK %>
